# advent-of-code-2024

./: .gitignore  day1.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  pyproject.toml  test.py
