[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Advent of code 2024"
authors = ["renee <50965960+wurenee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
parse = "^1.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
